# yabf

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  bump  coverage.xml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/PULL_REQUEST_TEMPLATE/: feature.md
.github/workflows/: changelog.yaml  check-build.yml  deploy.yaml  labeler.yml  merge-to-dev.yaml  release-draft.yml  test_suite.yaml
ci/: tests.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
integration_tests/: chi2_components.py  simple_gaussian.py  test_double_poly4.py  test_double_shared_linear.py  test_simple_chi2.py  test_single_poly4.py
src/yabf/: __init__.py  chi2.py  cli.py
src/yabf/core/: __init__.py  _samplers.py  component.py  configio.py  io.py  likelihood.py  mpi.py  parameters.py  samplers.py  types.py  typing.py  utils.py
src/yabf/samplers/: __init__.py  _emcee.py  _polychord.py  emcee.py  polychord.py
systematic_runs/: chi2_components.py  double_poly4.py  double_shared_linear.py  simple_chi2.py  simple_gaussian.py  single_poly4.py
tests/: __init__.py  shared_resources.py  test_components.py  test_configio.py  test_container.py  test_evidence.py  test_likelihoods.py  test_params.py  test_polychord.py  test_yabf.py  test_yaml.py
yabf/: __init__.py  chi2.py  cli.py  configio.py  io.py  likelihood.py  mpi.py  parameters.py  plugin.py  samplers.py  yaml.py
yabf/core/: __init__.py  _yaml.py  component.py  configio.py  io.py  likelihood.py  parameters.py  plugin.py  samplers.py  utils.py  yaml.py
