[build-system]
requires = ["setuptools>=60", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "yabf"
description = "Yet Another Bayesian Framework"
readme = "README.rst"
authors = [
    {name="Steven Murray", email="steven.murray@sns.it"},
]
license = {text="MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "cached-property",
    "click>=6.0",
    "frozendict",
    "getdist",
    "numpy>=1.6.2",
    "pyyaml>=5",
    "rich",
    "scipy",
    "pypolychord"
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/steven-murray/yabf"
Issues = "https://github.com/steven-murray/yabf/issues"
Changelog = "https://github.com/steven-murray/yabf/releases"

[project.scripts]
yabf = "yabf.cli:main"

[project.optional-dependencies]
docs = [
    "Sphinx>=1.7.5",
    "nbsphinx",
    "numpydoc>=0.8.0",
]
tests = [
  "coverage",
  "pytest",
  "pytest-cov",
  "pytest-lazy-fixtures",
  "pypolychord @ git+https://github.com/polychord/polychordlite"
]
dev = [
  "pre-commit",
  "yabf[docs,tests]"
]

[tool.pytest.ini_options]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = "--cov yabf --verbose --durations=25"
norecursedirs = [
    "dist",
    "build",
]
testpaths = "tests"


[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
extend-select = [
  "UP",   # pyupgrade
  "E",    # pycodestyle
  "W",    # pycodestyle warning
  "F",    # pyflakes
  "C90",  # mccabe complexity
  "I",    # isort
  "N",    # pep8-naming
  "D",    # docstyle
  # "ANN"   # type annotations
  "B",    # bugbear
  "A",    # builtins
  "C4",   # comprehensions
  "DTZ",  # datetime
  "FA",   # future annotations
  "PIE",  # flake8-pie
  "T",    # print statements
  "PT",   # pytest-style
  "Q",    # quotes
  "SIM",  # simplify
  "PTH",  # use Pathlib
  "ERA",  # kill commented code
  "NPY",  # numpy-specific rules
  "PERF", # performance
  # "FURB", # refurb
  "RUF",  # ruff-specific rules
  "RET",  # return statements
  "RSE",  # exception raises
  "TRY201", # verbose raise
]

ignore = [
    "DTZ007",   # use %z in strptime
    "N806",  # Variable name should be lower case. We have some single-letter variables that make more sense to be caps.
    "A003",  # Class attribute shadows a python builtin -- not much chance of that causing a problem
    "D401",  # First line should be in imperative mood -- cached_properties don't fit this bill.
    "D101",  # Missing docstring in public class -- my docstrings are in the __init__ which seems to fail this ?
    "N815",
    "N807",  # Allow method names to start and end with __
    "B008",  # allow setting defaults that call functions
    "RUF012", # mutable class attributes annotation
    # The rest should be un-commented when possible...
    "PTH123",
    "PT011",
    "NPY002",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "D",  # ignore missing docstring in tests
    "DTZ",   # ignore datetime in tests
    "T",     # print statements
]
"docs/conf.py" = [
    "A",  # conf.py can shadow builtins
    "ERA",
    "DTZ",
]
"src/*/__init__.py" = [
    "F401", "E402",
]


[tool.ruff.lint.pydocstyle]
convention = 'numpy'
property-decorators = [
    "property",
    "functools.cached_property",
    "pytest.fixture"
]
[tool.ruff.lint.mccabe]
max-complexity = 21
