
[metadata]
name = yabf
description = Yet Another Bayesian Framework
author = Steven Murray
author_email = steven.g.murray@asu.edu
license = mit
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/steven-murray/yabf
project_urls =
    Documentation = https://yabf.readthedocs.org
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    Intended Audience :: Science/Research
    License :: OSI Approved
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    click>=6.0
    numpy>=1.6.2
    scipy>=1.0.0
    pyyaml>=5
    rich
    cached_property
    importlib_metadata; python_version<'3.8'

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install cal_coefficients[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
docs =
    Sphinx>=1.7.5
    numpydoc>=0.8.0
    nbsphinx
tests =
    coverage>=4.5.1
    pytest>=3.5.1
    pytest-cov>=2.5.1
    pre-commit
dev =
    Sphinx>=1.7.5
    numpydoc>=0.8.0
    nbsphinx
    coverage>=4.5.1
    pytest>=3.5.1
    pytest-cov>=2.5.1
    pre-commit
    bump2version

[bdist_wheel]
universal = 1

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
