[metadata]
name = yabf
description = Yet Another Bayesian Framework
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/steven-murray/yabf
author = Steven Murray
author_email = steven.g.murray@asu.edu
license = MIT
license_file = LICENSE.rst
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Documentation = https://yabf.readthedocs.org

[options]
packages = find:
install_requires =
    cached_property
    click>=6.0
    frozendict
    getdist
    numpy>=1.6.2
    pyyaml>=5
    rich
    scipy>=1.0.0
    importlib_metadata;python_version<'3.8'
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools_scm
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    yabf = yabf.cli:main

[options.extras_require]
dev =
    Sphinx>=1.7.5
    bump2version
    coverage>=4.5.1
    nbsphinx
    numpydoc>=0.8.0
    pre-commit
    pytest>=3.5.1
    pytest-cov>=2.5.1
docs =
    Sphinx>=1.7.5
    nbsphinx
    numpydoc>=0.8.0
tests =
    coverage>=4.5.1
    pre-commit
    pytest>=3.5.1
    pytest-cov>=2.5.1

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
